styles/style.css
* {
    margin: 0;
    padding: 0;
    /* background: red; */
    font-family: 'Work Sans', sans-serif;
}

/* .container {
    display: flex;
    justify-content: space-between;
    max-width: 1250px;
} */
main,
footer {
    max-width: 1440px;
    margin: 0 auto;
}

header {
    background: rgba(255, 144, 14, 0.1);
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1450px;
    margin: 0 auto;
    padding-top: 50px;
}

.container h3 {
    color: #131313;
    font-weight: 700;
    font-size: 45px;
}

nav ul {
    display: flex;
    list-style: none;
    gap: 30px;

}

nav ul>li {
    font-weight: 500;
    font-size: 18px;
    color: #424242;
}

/* ***************************** banner txt ***************************** */
.txt {
    max-width: 862px;
    text-align: center;
    margin: 0 auto;
    padding-top: 102px;
}

.txt h1 {
    font-weight: 700;
    font-size: 64px;
    color: #131313;
}

.txt p {
    font-weight: 400;
    font-size: 16px;
    color: #727272;
    padding: 32px 0;
}

.btn {
    width: 180px;
    height: 64px;
    background: #FF900E;
    border-radius: 8px;
    color: #FFFFFF;
    font-weight: 600;
    font-size: 20px;
    border: none;
}

/* ***************************** banner img ***************************** */
.banner-img {
    padding: 50px 0;
    max-width: 1440px;
    margin-left: auto;
    margin-right: auto;
}

.fluid-img {
    width: 100%;
    height: auto;
}

/* ***************************** features CSS  ***************************** */
.features {
    padding: 85px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.feature-img {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 24px;
}

.feature-img img {
    max-width: 342px;
    max-height: 342px;

}

.feature-txt {
    max-width: 537px;
    max-height: 304px;
}

#quick-list-h3 {
    font-weight: 500;
    /* font-size: 45px; */
    color: #727272;
}

.feature-txt h3 {
    color: #131313;
    font-weight: 700;
    font-size: 45px;
}

#features-h3 {
    color: #FF900E;
}

.feature-txt p {
    color: #727272;
    font-weight: 400;
    font-size: 16px;
    padding: 24px 0 32px 0;
}

/* ***************************** feature you will love & enjoy ***************************** */

.feature-love-enjoy {
    display: flex;
    align-items: center;
    justify-content: space-between;

}

.feature-love-enjoy-articles {
    max-width: 586px;
    max-height: 982px;

}

.orange-line {
    display: flex;
    justify-content: space-between;
    gap: 21px;
}

.vl {
    border-left: 5px solid #FF900E;
    height: 106px;
}

.feature-love-enjoy-articles h2 {
    font-weight: 700;
    font-size: 45px;
    color: #131313;
    margin-bottom: 24px;

}

.feature-article {
    max-width: 586px;
    max-height: 171px;
    margin: 20px 0;
    padding: 30px;
    background: #FFFFFF;
    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
    border-radius: 8px;
}

.feature-love-enjoy-articles h5 {
    font-weight: 600;
    font-size: 20px;
    color: #131313;
}

.feature-love-enjoy-articles p {
    color: #727272;
}

.feature-love-enjoy-img-container {
    width: 800px;
    height: 1059px;
    /* display: grid; */
    position: relative;
}

.feature-love-enjoy-img-container img {
    max-width: 708px;
    max-height: 982px;
    position: absolute;
    top: 0;
    right: 0;
}

.exp-10year {
    width: 342px;
    height: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: #FF900E;
    border-radius: 8px;
    color: #FFFFFF;
    position: absolute;
    bottom: 0;
    left: 0;
    /* flex-wrap: wrap; */
}

.exp-10year h1 {
    font-weight: 700;
    font-size: 65px;
}

.exp-10year p {
    font-weight: 500;
    font-size: 25px;
}

/* ---------------------------
 some facts CSS
------------------------------ */
.some-facts-container {
    width: 1440px;
    margin: 0 auto;
}

.some-facts {
    width: 542px;
    padding-top: 100px;
}

.some-facts h3 {
    font-weight: 700;
    font-size: 45px;
    color: #131313;
    padding-bottom: 24px;
}

.some-facts p {
    font-weight: 400;
    font-size: 16px;
    color: #727272;
}

/* -------------------------
counts of achievements 
----------------------------*/
.counts-of-achievements {
    display: flex;
    justify-content: space-evenly;
    padding-top: 100px;
}

.count-values {
    width: 241.83px;
    height: 241.83px;
    border: 1px solid #FF900E;
    border-radius: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    transition: all 1s ease-in-out;
}

.count-values:hover {
    transform: rotate(-360deg);
}

.count-values h3 {
    font-weight: 600;
    font-size: 45px;
    color: #424242;
}

.count-values p {
    font-weight: 600;
    font-size: 20px;
    color: #727272;
}

/* --------------------------
sponsor css
----------------------------- */
.sponsor-container {
    padding-top: 100px;

}

.sponsor-txt {
    max-width: 542px;
    text-align: center;
    margin: 0 auto;
    padding-bottom: 50px;

}

.sponsor-txt h3 {
    font-weight: 700;
    font-size: 45px;
    color: #131313;
}

.sponsor-txt p {
    font-weight: 400;
    font-size: 16px;
    color: #727272;
    padding-top: 24px;
}

.sponsor-logo {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-bottom: 100px;
    position: relative;
}

.sponsor-logo img {
    filter: grayscale(100%);
    /* position: absolute; */
    /* animation: lineH 5s 1s infinite linear; */
}

/* ------------------------------
footer CSS
---------------------------------- */
footer {
    background: #FFF4E7;
    border-radius: 8px;
    padding: 40px 0;
}

.contact-info {
    display: flex;
    text-align: center;
    justify-content: space-around;
}

.details {
    height: 130px;
    width: 200px;
    color: #424242;
    background: #FFF4E7;
    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
    border-radius: 8px;
    padding: 30px;
}

.details h3 {
    padding: 10px 0;
    color: #131313;

}

.footer-copyright {
    display: flex;
    align-items: center;
    justify-content: center;
}

.footer-copyright p {
    color: #424242;
    font-weight: 400;
    font-size: 20px;
    padding-top: 70px;
    padding-bottom: 40px;
}

body {
    padding-bottom: 200px;
}

/*-----------------------------------------------
-------------------------------------------------
 media query  responsive for mobile device(576px)
 ------------------------------------------------
---------------------------------------------- */
@media screen and (max-width:576px) {

    nav,
    nav ul {
        flex-direction: column;
        row-gap: 25px;
        text-align: center;
    }


    .container h3 {
        font-weight: 600;
        font-size: 35px;
    }

    .txt {
        padding-top: 50px;
    }

    .txt h1 {
        font-weight: 600;
        font-size: 45px;
    }

    .txt p {
        padding: 32px 20px;
    }

    .btn {
        width: 160px;
        height: 55px;
    }

    .features {
        flex-direction: column-reverse;
        text-align: center;
    }

    .feature-txt button {
        margin-bottom: 20px;
    }

    .feature-img {
        grid-template-columns: repeat(1, 1fr);
    }

    .feature-love-enjoy {
        flex-direction: column;
    }

    .feature-love-enjoy-articles h2 {
        font-weight: 600;
        font-size: 38px;
    }

    #f-l-e-article {
        padding-left: 10px;
        padding-right: 10px;
    }

    .feature-love-enjoy-img-container {
        /* width: 570px; */
        /* height: 800px; */
        /* border: 1px solid red; */
        /* display: grid; */
        position: relative;
        /* overflow: hidden; */
        /* display: none; */
    }

    .feature-love-enjoy-img-container {
        width: 100%;
    }

    .exp-10year {
        position: absolute;
        /* bottom: 0; */
        /* top: 0; */
        margin-left: 155px;
        width: 250px;
        height: 150px;
    }

    .exp-10year h1 {
        font-weight: 600;
        font-size: 45px;
    }

    .exp-10year p {
        font-weight: 500;
        font-size: 20px;
    }

    .some-facts {
        text-align: center;
        padding-left: 20px;
        padding-right: 20px;
    }

    .some-facts h3 {
        font-weight: 600;
        font-size: 38px;
    }

    .counts-of-achievements {
        flex-direction: column;
        row-gap: 25px;
        align-items: center;
    }

    .sponsor-txt h3 {
        font-weight: 600;
        font-size: 38px;
    }

    .sponsor-logo {
        flex-direction: column;
        row-gap: 50px;
        align-items: center;
    }

    .sponsor-logo img {
        height: 70px;
        width: 200px;
    }

    .contact-info {
        flex-direction: column;
        align-items: center;
        row-gap: 20px;
    }

    .footer-copyright {
        text-align: center;
    }

    body {
        padding-bottom: 0;
    }

}

